# jarvis_controller

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: action-lifecycle.md  client-action-contract.md  computer-use-action-plan.md  service-endpoints.md
jarvis_controller/: __init__.py
src/: app.py
src/jarvis_controller/: app.py  executor.py
src/middleware/: auth_middleware.py  core_bridge.py  core_client.py  gateway_client.py
src/planner/: action_adapter.py  action_compiler.py  action_context.py  action_dispatcher.py  action_gate.py  action_intent_classifier.py  action_model_client.py  action_pipeline.py  action_plan_parser.py  action_templates.py  action_validator.py  client_action_intents.py  conversation_orchestrator.py  conversation_routing.py  dom_link_resolver.py  executor.py  planning_engine.py  runtime_profile_enricher.py
src/router/: router.py
tests/: test_action_adapter.py  test_action_compiler.py  test_action_context.py  test_action_pipeline.py  test_action_validator.py  test_app.py  test_conversation_orchestrator.py  test_conversation_routing.py  test_core_client.py  test_error_response.py  test_planning_engine.py
