[build-system]
requires = ["setuptools>=56", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-controller"
version = "0.1.0"
description = "Jarvis controller action execution service"
readme = "README.md"
requires-python = ">=3.12"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
